# alexa-foundry-manager

./: .gitignore  README.md  pyproject.toml
cdk/: app.py
cdk/cdk/: foundry_skill_stack.py
cdk/tests/unit/: test_cdk_stack.py
lambdas/: foundry.py  foundry_handler.py
models/: en-US.json
